# Ashenmere

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
benchmarks/: load_test.py
client/: Dockerfile  config.dante.yaml  config.example.yaml  config.luna.yaml  config.marco.yaml  config.mei.yaml  config.rex.yaml  config.sage.yaml  config.viktor.yaml  config.yuki.yaml  pyproject.toml
client/src/agentburg_client/: __init__.py  __main__.py  brain.py  config.py  connection.py  memory.py
client/tests/: conftest.py  test_brain.py  test_config.py  test_connection.py  test_memory.py
dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  hooks.ts  index.css  types.ts
docs/: SECURITY.md
k8s/: dashboard.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  nats.yaml  networkpolicy.yaml  postgres.yaml  redis.yaml  secrets.yaml.example  server-deployment.yaml
ralph/: demo-30min.txt  demo-state.txt  prd.json  progress.txt
ralph/archive/2026-03-23-scaffold-phase/: prd.json
server/: Dockerfile  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 001_initial_schema.py  506ef1fa18a2_add_season_model_and_agent_season_fk.py  7fd27461d275_add_agent_position_columns.py
server/scripts/: seed.py  seed_dev.py  seed_production.py
server/src/agentburg_server/: __init__.py  config.py  db.py  main.py  metrics.py
server/src/agentburg_server/api/: __init__.py  deps.py  routes.py  ws.py
server/src/agentburg_server/engine/: __init__.py  tick.py
server/src/agentburg_server/models/: __init__.py  agent.py  base.py  economy.py  event.py  season.py  social.py  user.py
server/src/agentburg_server/plugins/: __init__.py  base.py  manager.py
server/src/agentburg_server/plugins/builtin/: __init__.py  economy_stats.py
server/src/agentburg_server/services/: __init__.py  action_handler.py  auth.py  bank.py  business.py  court.py  event_bus.py  event_logger.py  game_master.py  locations.py  market.py  npc_engine.py  production.py  query_handler.py  rate_limiter.py  social.py  world_events.py
server/tests/: conftest.py  test_action_handler.py  test_api.py  test_auth.py  test_bank.py  test_business.py  test_config.py  test_court.py  test_event_bus.py  test_market.py  test_memory.py  test_npc_engine.py  test_plugins.py  test_protocol.py  test_query_handler.py  test_rate_limiter.py  test_scale.py  test_security.py  test_social.py  test_tick_engine.py  test_websocket.py
shared/: pyproject.toml
shared/agentburg_shared/: __init__.py
shared/agentburg_shared/protocol/: __init__.py  messages.py
src/frontend/: package.json
src/frontend/src/: App.tsx
src/frontend/src/hooks/: useGameState.ts
tests/fixtures/agents/: config.dante.yaml  config.marco.yaml  config.mei.yaml  config.rex.yaml  config.viktor.yaml
