[project]
name = "agentburg"
version = "0.1.0"
description = "Autonomous AI agent economy simulation platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "AgentBurg Team" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["server", "client", "shared"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101"]  # Allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["agentburg_server", "agentburg_client", "agentburg_shared"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["server/tests", "client/tests"]
