[project]
name = "agentburg-shared"
version = "0.1.0"
description = "Shared protocol and models for AgentBurg"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10",
    "msgpack>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentburg_shared"]
